add components skills, address, summary and tests for App

--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "skybet-test",
+  "name": "booking",
   "version": "1.0.0",
   "description": "test",
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server",
-    "server": "babel-watch server",
     "clean": "rimraf dist",
     "lint": "eslint ./app/**/**.js",
     "test": "jest",
@@ -28,13 +27,9 @@
   },
   "dependencies": {
     "antd": "^3.0.0",
-    "axios": "^0.16.2",
     "babel-core": "6.26.0",
     "babel-polyfill": "^6.26.0",
-    "body-parser": "^1.18.0",
-    "cors": "^2.8.4",
     "cross-env": "5.0.1",
-    "express": "^4.15.4",
     "prop-types": "^15.5.10",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
@@ -66,7 +61,6 @@
     "eslint-plugin-jsx-a11y": "5.1.0",
     "eslint-plugin-react": "7.2.0",
     "extract-text-webpack-plugin": "3.0.0",
-    "file-loader": "1.0.0",
     "html-webpack-plugin": "2.30.0",
     "husky": "0.14.3",
     "jest": "^21.2.1",
